@@ -1,4 +1,6 @@
 - fix testsuite
+- security:
+  o honor per medium "verify-rpm" option for missing signature check
 - unrequested package list management (for orphans) (mga#7167):
   o do not wrongly tell we updated the unrequested package list when we didn't
     (eg: when not having the proper rights such as running urpmq as !root)
